Estro not estro.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "estro",
+  "name": "Estro",
   "description": "Extended String Object, Gain more from your strings.",
   "version": "0.1.3",
   "homepage": "https://github.com/Nijikokun/Estro",
